K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviesapi-service
spec:
  type: NodePort
  selector:
    app: moviesapi
  ports:
  - name: moviesapi-serviceport
    nodePort: 31000
    protocol: TCP
    port: 8080
    targetPort: 8080
